alignment fix #1

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -12,7 +12,8 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
+  width: 100%;
 }
 
 .animation {
